--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.r2dbc.url=${DB_URL}
 spring.r2dbc.username=${DB_USERNAME}
 spring.r2dbc.password=${DB_PASSWORD}
 remote.service.base-url=${REMOTE_SERVICE_BASE_URL}
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
