--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8081
 spring.r2dbc.url=${DB_URL}
 spring.r2dbc.username=${DB_USERNAME}
 spring.r2dbc.password=${DB_PASSWORD}
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
