--- a/post-service/src/test/resources/application.properties
+++ b/post-service/src/test/resources/application.properties
@@ -1,3 +1,4 @@
 spring.r2dbc.url=r2dbc:postgresql://localhost/test
 spring.r2dbc.username=user
 spring.r2dbc.password=password
+remote.service.base-url=http://localhost
