--- a/kube/pvc-pv-storage-class-configuration.yml
+++ b/kube/pvc-pv-storage-class-configuration.yml
@@ -2,21 +2,31 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: db-postgres-local-pv
+  namespace: k8s-program
 spec:
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Recycle
-  hostPath:
-    path: /mnt/disk/volume
+  storageClassName: db-local-storage
+  local:
+    path: /usr/share
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+          - key: kubernetes.io/hostname
+            operator: In
+            values:
+              - docker-desktop
 
 ---
 
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: users-db-local-storage
+  name: db-local-storage
   namespace: k8s-program
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
@@ -26,7 +36,7 @@ volumeBindingMode: WaitForFirstConsumer
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: users-db-postgres-pvc
+  name: db-postgres-pvc
   namespace: k8s-program
 spec:
   accessModes:
@@ -34,29 +44,4 @@ spec:
   resources:
     requests:
       storage: 256Mi
-  storageClassName: users-db-local-storage
-
----
-
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: posts-db-local-storage
-  namespace: k8s-program
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
-
----
-
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: posts-db-postgres-pvc
-  namespace: k8s-program
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 256Mi
-  storageClassName: posts-db-local-storage
+  storageClassName: db-local-storage
