--- a/kube/templates/secrets.yml
+++ b/kube/templates/secrets.yml
@@ -3,7 +3,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: users-database-secret
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 stringData:
   username: postgres
   password: admin
@@ -17,7 +17,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: posts-database-secret
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 stringData:
   username: postgres
   password: admin
