--- a/kube/templates/database-configuration.yml
+++ b/kube/templates/database-configuration.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
   name: user-db
 spec:
   selector:
@@ -16,7 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: user-db
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     matchLabels:
@@ -84,7 +84,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: post-db
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: post-db
@@ -98,7 +98,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: post-db
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     matchLabels:
