--- a/kube/templates/pvc-pv-storage-class-configuration.yml
+++ b/kube/templates/pvc-pv-storage-class-configuration.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: db-postgres-local-pv
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 spec:
   capacity:
     storage: 1Gi
@@ -27,7 +27,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: db-local-storage
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 
@@ -37,7 +37,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: db-postgres-pvc
-  namespace: k8s-program
+  namespace: {{ .Values.namespace }}
 spec:
   accessModes:
     - ReadWriteMany
